--- a/style.css
+++ b/style.css
@@ -104,3 +104,9 @@
 .letter-spacing{
     letter-spacing: 0.04em;
 }
+.footer-container{
+    border-top: 1px solid var(--black);
+    background-color: var(--grey);
+    padding: 1rem;
+    color: var(--white);
+}
