--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 @import url('./result/result.css');
 
 @import url('./rules/rules.css');
-
+@import url('./login/login.css');
+@import url('./signup/signup.css');
 
 .p-2rem{
     padding: 2rem;
