--- a/style.css
+++ b/style.css
@@ -111,3 +111,8 @@
     padding: 1rem;
     color: var(--white);
 }
+
+.bg-quizz-home{
+    background-color: #b8c6db;
+    background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+}
